Disable warnings on JDK 25.